# PyGalaxyIC

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: tests.yml
src/PyGalaxyIC/: _version.py  core.py
tests/: test_core.py
