[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["PyGalaxyIC"]

[project]
name = "PyGalaxyIC"
dynamic = ["version"]
description = "A Python library for astrophysical / galaxy initial-condition computations."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Panagiotis Kyziropoulos", email = "kyz.panos@gmail.com" }
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy>=1.26.2",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "chardet>=5.2.0"
]

[project.optional-dependencies]
accel = [
    "numba>=0.59.0"
]
plot = [
    "matplotlib>=3.8.0"
]
test = [
    "pytest>=3.8.0"
]

all = [
    "numba>=0.59.0",
    "matplotlib>=3.8.0",
    "pytest>=3.8.0"
]

[tool.setuptools_scm]
write_to = "src/PyGalaxyIC/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"